# dan-s-bullshit

./: .gitignore  README.md  dan_quotes_service_fb5c8b8c.plan.md  package-lock.json  plan.md  pyproject.toml  requirements.txt
app/: __init__.py  auth.py  instantdb.py  localdb.py  main.py  models.py  mongostore.py
app/static/: style.css
app/templates/: admin.html  admin_login.html  base.html  error.html  index.html  random.html  register.html  register_success.html  submit.html  submit_success.html
scripts/: add_admin.py  check_prod_users.py  compare_dbs.py  debug_mongo.py  import_records.py  migrate_admins.py  reset_likes.py  test_user_flow.py
